# rust-esp32-example

./: Cargo.toml  Readme.md  build.rs
.cargo/: config.toml
.devcontainer/: Dockerfile  devcontainer.json
component/: Cargo.toml  build.rs
component/src/: lib.rs
src/: main.rs
