[package]
name = "cpp_example"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"
test = true         # Is tested by default.

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# all = ["nightly", "experimental", "embassy"]
# nightly = [
#     "embedded-svc/nightly",
#     "esp-idf-svc/nightly",
# ] # Future: "esp-idf-hal?/nightly"
# experimental = ["embedded-svc/experimental", "esp-idf-svc/experimental"]
# embassy = [
#     "esp-idf-hal/embassy-sync",
#     "esp-idf-hal/critical-section",
#     "esp-idf-hal/edge-executor",
#     "esp-idf-svc/embassy-time-driver",
#     "esp-idf-svc/embassy-time-isr-queue",
# ]

[target.'cfg(target_arch = "xtensa")'.dependencies]
log = { version = "0.4.17", optional = true, default-features = false }
esp-idf-sys = { version = "0.34.1", features = ["std", "native", "binstart"] }
esp-idf-hal = { version = "0.43.1", features = ["std", "alloc"] }
esp-idf-svc = { version = "0.48.1", features = ["std", "alloc"] }
embedded-svc = { version = "0.27.1", features = [
    "std",
    "alloc",
    "experimental",
] }

[package.metadata.esp-idf-sys]
extra_components = [
    { component_dirs = [
        "library",
    ], bindings_header = "library/bindings.h" },
] # To get more informations about this parameters checkout https://github.com/esp-rs/esp-idf-sys/blob/master/BUILD-OPTIONS.md#extra-esp-idf-components

[build-dependencies]
embuild = "0.31.2"
bindgen = "0.69.4"
cc = { version = "1.0", features = ["parallel"] }
